--- a/flexbox/0-styles.css
+++ b/flexbox/0-styles.css
@@ -190,16 +190,16 @@
     display: flex;
 
   }
-  /* .row::after {
+   /* .row::after {
     content: '';
     display: table;
     clear: both;
-  }
+  } */
   
   [class*='col-'] {
-    float: left;
+    /* float: left; */
     padding: 0.5rem;
-  } */
+  } 
   
   .col-1-3 {
     width: 33.33%;
