--- a/flexbox/5-styles.css
+++ b/flexbox/5-styles.css
@@ -61,7 +61,11 @@
   
     /** HEADER **/
     --header-padding: 4rem 0 0;
-
+    /* --header-logo-position: relative;
+    --header-logo-link-display: inline-block;
+    --header-logo-link-position: absolute;
+    --header-logo-link-top: -1rem;
+    --header-logo-link-left: 0; */
   
     /** FOOTER **/
     --footer-padding: 5rem 0 1rem;
@@ -209,10 +213,10 @@
   /* Navbar
       ============================= */
   
-  .navbar-menu {
+  /* .navbar-menu {
     float: right;
   }
-  
+   */
   .nav {
     margin: 0;
     padding: 0;
